# little-paint

./: LICENSE
broke source code/: CMakeLists.txt  UndoStack.h  build.sh  canvaswidget.cpp  canvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.txt  tool.cpp  tool.h
source code broke one/: canvaswidget.cpp  canvaswidget.h  mainwindow.cpp  mainwindow.h  readme.txt  resources.qrc  tool.cpp  tool.h
source code five/: canvaswidget.cpp  canvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.txt  tool.cpp  tool.h  undostack.cpp
source code four/: CMakeLists.txt  canvaswidget.cpp  canvaswidget.h  littlepaint.desktop  mainwindow.cpp  mainwindow.h  package.sh  readme.txt  tool.cpp  tool.h
source code one/: CMakeLists.txt  canvaswidget.cpp  canvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  package.sh  readme.txt  tool.cpp  tool.h  undostack.cpp
source code seven/: UndoStack.h  canvaswidget.cpp  canvaswidget.h  littlepaint.desktop  mainwindow.cpp  readme.txt
source code six/: CMakeLists.txt  canvaswidget.cpp  canvaswidget.h  log.txt  mainwindow.cpp  mainwindow.h  package.sh  readme.txt  tool.cpp
source code two/: readme.txt
